<resources>
    <string name="app_name">RestMenu</string>
    <string name="action_settings">Settings</string>

    <!-- Settings -->
    <string name="settings">Paramètres</string>
    <string name="general">GÉNÉRAL</string>
    <string name="selectTableNbr">Choisir le numéro de la table</string>
    <string name="infoTablesNbr">15 tables</string>
    <string name="changeSecretCode">Modifier le code secret</string>

    <!-- Table -->
    <string name="table">Numéro de la table</string>
    <string name="setTableNbr">Le numéro de la table</string>
    <string name="selectTableNbrFromTo">Une table de 1 à 15</string>
    <string name="CancelTableNbr">Annuler</string>
    <string name="ScanQr">QR Code</string>
    <string name="OkTableNbr">Ok</string>

    <!-- Secret Code -->
    <string name="secretCode">Code secret</string>
    <string name="infoServerSecretCode">Code secret du serveur</string>
    <string name="setTheCode">Code à 4 chiffres</string>
    <string name="confirmTheCode">Confirmer le code secret</string>

    <!-- Home -->
    <string name="welcome">Bienvenue</string>
    <string name="historyLabel">Histoire</string>
    <string name="galleryLabel">Language</string>
    <string name="playLabel">Jouer</string>
    <string name="hoursLabel">Horaires</string>
    <string name="commandLabel">Commander</string>
    <string name="contactLabel">Contacter</string>
    <string name="infoServerSecretCodeForgoten"><u>Code PIN oublié?</u></string>

    <!-- History -->
    <string name="history">Histoire</string>
    <string name="ourHistory">Notre histoire</string>
    <string name="ourTeam">Notre équipe</string>
    <string name="cookBook">Livre de recettes</string>
    <string name="ourPassions">Nos passions</string>
    <string name="international">International</string>
    <string name="partnerships">Partenariats</string>
    <string name="ourHistorySummary">Depuis 1930...</string>
    <string name="ourTeamSummary">Une équipe de 15 professionnel</string>
    <string name="cookBookSummary">2 livres</string>
    <string name="ourPassionsSummary">la restauration c\'est notre passion</string>
    <string name="internationalSummary">13 restaurants partout dans le monde</string>
    <string name="partnershipsSummary">NRJ, BNP...</string>

    <!-- Gallery -->
    <string name="gallery">Galerie</string>

    <!-- Games -->
    <string name="play">Jouer</string>
    <string name="clashOfClans">Clash Of Clans</string>
    <string name="limbo">LIMBO</string>
    <string name="minecraft">Minecraft PE</string>
    <string name="clashOfClansPkg">com.supercell.clashofclans</string>
    <string name="limboPkg">com.playdead.limbo.full</string>
    <string name="minecraftPkg">com.mojang.minecraftpe</string>

    <!-- Hours -->
    <string name="hours">Horaires</string>
    <string name="hoursList">De lundi à samedi\n12:00 - 16:00\n19:00 - 22:00</string>

    <!-- Command -->
    <string name="command">Commander</string>
    <string name="appetizers">Entrées</string>
    <string name="mains">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="beverages">Boissons</string>
    <string name="teasCoffes">Thés et Cafés</string>
    <string name="myCommand">Ma commande</string>
    <string name="imageTitle">Poulet aux trois poivrons</string>
    <string name="basicInfo"><b>Type</b> : Poulet aux trois poivrons\n
                             <b>Catégorie</b> : plats\n
                             <b>Energie</b> : 387 kcal\n
                             <b>Matiéres</b> grasses : 7 g\n
                             <b>Glucides</b> : 62 g\n
                             <b>Fibres</b> : 10 g\n
                             <b>Protéines</b> : 14 g\n
                             <b>Sel</b> : 1 g\n</string>
    <string name="moreInfo">Poulet aux trois poivrons est un mets de la cuisine italienne qui nécessite champignons, légumes. Il existe de nombreuses variantes.\nIngrédients : Outre le poulet, ce mets est réalisé à base de tomates, oignons, champignons, ail, poivrons (couleurs variées) et herbes de Provence (origan,thym, romarin). Certaines recettes, en plus du poivre, y ajoutent du paprika, d\'autres du persil, des câpres et des olives vertes et noires.</string>

    <string-array name="image_ids">
        <item>@drawable/a_image_1</item>
        <item>@drawable/a_image_2</item>
        <item>@drawable/a_image_3</item>
        <item>@drawable/a_image_4</item>
        <item>@drawable/a_image_5</item>
        <item>@drawable/a_image_6</item>
        <item>@drawable/a_image_7</item>
        <item>@drawable/a_image_8</item>
        <item>@drawable/a_image_9</item>
        <item>@drawable/a_image_10</item>
        <item>@drawable/a_image_11</item>
        <item>@drawable/a_image_12</item>
        <item>@drawable/a_image_13</item>
        <item>@drawable/a_image_14</item>
        <item>@drawable/a_image_15</item>
        <item>@drawable/m_image_1</item>
        <item>@drawable/m_image_2</item>
        <item>@drawable/m_image_3</item>
        <item>@drawable/m_image_4</item>
        <item>@drawable/m_image_5</item>
        <item>@drawable/m_image_6</item>
        <item>@drawable/m_image_7</item>
        <item>@drawable/m_image_8</item>
        <item>@drawable/m_image_9</item>
        <item>@drawable/m_image_10</item>
        <item>@drawable/m_image_11</item>
        <item>@drawable/d_image_1</item>
        <item>@drawable/d_image_2</item>
        <item>@drawable/d_image_3</item>
        <item>@drawable/d_image_4</item>
        <item>@drawable/d_image_5</item>
        <item>@drawable/d_image_6</item>
        <item>@drawable/d_image_7</item>
        <item>@drawable/d_image_8</item>
        <item>@drawable/d_image_9</item>
        <item>@drawable/b_image_1</item>
        <item>@drawable/b_image_2</item>
        <item>@drawable/b_image_3</item>
        <item>@drawable/b_image_4</item>
        <item>@drawable/b_image_5</item>
        <item>@drawable/b_image_6</item>
        <item>@drawable/b_image_7</item>
        <item>@drawable/b_image_8</item>
        <item>@drawable/t_image_1</item>
        <item>@drawable/t_image_2</item>
        <item>@drawable/t_image_3</item>
    </string-array>

    <!-- Contact2 -->
    <string name="contact">Contacter</string>
    <string name="adress">8 Résidance de bla bla bla 75000 Paris</string>
    <string name="phone">(+33) 77 88 99 11</string>
    <string name="email">rest_mail@gmail.com</string>

    <string name="passCommand">Confirmation</string>
    <string name="infoPassCommand">voulez vous passer cette commande?</string>

    <string name="title_activity_table_selector">TableSelector</string>
    <string name="title_activity_secret_code">secretCode</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_hours">Hours</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_command">Command</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_games">Games</string>
    <string name="title_activity_detailsActivity">Details Activity</string>
</resources>