<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="45dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/infoServerSecretCode"
        android:textSize="35sp"
        android:textColor="@color/blue1"
        android:id="@+id/txtvSecretCode" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        android:ems="10"
        android:paddingLeft="15dp"
        android:text="@string/setTheCode"
        android:textSize="24sp"
        android:textColor="@color/grey1"
        android:background="@drawable/edit_text_style"
        android:id="@+id/editTxtTableNbr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/infoServerSecretCodeForgoten"
        android:textSize="24sp"
        android:textColor="@color/blue1"
        android:id="@+id/txtvInfoSecretCodeForgoten" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="30dp"
        android:layout_gravity="center">

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="150dp"
            android:text="@string/CancelTableNbr"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:id="@+id/customDialogCancel" />

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="150dp"
            android:text="@string/OkTableNbr"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:id="@+id/customDialogOk" />
    </LinearLayout>
</LinearLayout>