<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="45dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/table"
        android:textSize="35sp"
        android:textColor="@color/blue1"
        android:id="@+id/txtvTable" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="13dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setTableNbr"
            android:textSize="24sp"
            android:id="@+id/txtvInfoSelectTable" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:inputType="number"
            android:ems="10"
            android:paddingLeft="15dp"
            android:text="@string/selectTableNbrFromTo"
            android:textSize="24sp"
            android:textColor="@color/grey1"
            android:background="@drawable/edit_text_style"
            android:id="@+id/editTxtTableNbr"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:text="@string/CancelTableNbr"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:id="@+id/btnCancelTableNbr" />

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="200dp"
            android:text="@string/ScanQr"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:onClick="scan"
            android:id="@+id/btnScanQr" />

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:text="@string/OkTableNbr"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:onClick="goHome"
            android:id="@+id/BtnOkTableNbr" />
    </LinearLayout>

</LinearLayout>