<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="45dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings"
        android:textSize="35sp"
        android:textColor="@color/blue"
        android:id="@+id/txtvSettings" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/general"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textColor="@color/grey1"
            android:id="@+id/txtvGeneral" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:background="@color/grey2" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selectTableNbr"
        android:textSize="28sp"
        android:onClick="selectTable"
        android:id="@+id/txtvSelectTableNbr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/infoTablesNbr"
        android:textSize="24sp"
        android:textColor="@color/grey1"
        android:id="@+id/txtvInfoTablesNbr" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/grey2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/changeSecretCode"
        android:textSize="28sp"
        android:onClick="setCode"
        android:id="@+id/txtvChangeSecretCode" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/grey2" />
</LinearLayout>